<resources>
    <string name="app_name">Shikshya prasasak</string>
    <string name="version">V 0.0.1 beta</string>

    <!-- For navigation menu -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!--TextEditor menu label-->
    <string name="action_settings">Settings</string>
    <string name="action_done">Done</string>
    <string name="action_html">Show HTML</string>
    <string name="action_text">Show text</string>
    <string name="action_set_html">Set HTML</string>

    <!-- Navigation drawer menu label -->
    <string name="nav_notice">Notice</string>
    <string name="nav_account">Account</string>
    <string name="nav_homework">Homework</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_complain">Complain</string>
    <string name="nav_contacts">Contacts</string>


    <!--WebView Text-->
    <string name="action_back">Back</string>
    <string name="action_forward">Forward</string>
    <string name="action_bookmark">Bookmark</string>

    <string name="Baisakh">Baisakh</string>
    <string name="Jestha">Jestha</string>
    <string name="Ashar">Ashar</string>
    <string name="Shrawan">Shrawan</string>
    <string name="Bhadra">Bhadra</string>
    <string name="Ashoj">Ashoj</string>
    <string name="Kartik">Kartik</string>
    <string name="Mangsir">Mangsir</string>
    <string name="Poush">Poush</string>
    <string name="Magh">Magh</string>
    <string name="Falgun">Falgun</string>
    <string name="Chaitra">Chaitra</string>
    <string name="name__">Roll No</string>

    <!--Calender text -->
    <string name="loading_calender_info">Loading Calendar Information</string>
    <string name="holidays">HOLIDAYS</string>
    <string name="events">EVENTS</string>
    <string name="jestha_2075">Jestha 2075</string>
    <string name="may_jun_n2018">May/Jun  2018</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="wed">Wed</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="update">Update</string>

    <string name="_2075_jestha_26">2075, Jestha 26</string>
    <string name="class_wise_income_vs_due_balance">Class wise Income vs Due Balance</string>
    <string name="total_charged">Total Charged</string>
    <string name="total_paid">Total Paid</string>
    <string name="total_due">Total Due</string>
    <string name="notice_created_on_this_section_will_be_sent_to_parents_teachers_or_both_as_per_category_selected_below">Notice created on this section will be sent to parents,teachers or both as per category selected below.</string>


    //newly added string from the shikshya shikshak
    <string name="product_of" translatable="false"><![CDATA[Ver 1.1.18 &nbsp&nbsp&nbsp Product of <font color=#089AD6>Cosmos</font> & <font color=#CC6A22>Bihani</font>]]></string>
    <string name="phone_number">Phone Number</string>
    <string name="forget_password">Forget Password?</string>
    <string name="register">REGISTER</string>
    <string name="dont_have_an_account">Don’t have an account?</string>
    <string name="we_will_send_the_one_time_verification">We will send the One Time Verification code through SMS so please use mobile number registered in school</string>
    <string name="number_not_registered">Number not registered?</string>
    <string name="contact_us">Contact us</string>
    <string name="new_password">New Password</string>
    <string name="setup_login_password">Setup Login Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm">CONFIRM</string>
    <string name="enter_six_digit_code">Enter the 6 digit code you received via SMS.</string>
    <string name="otp_code">OTP Code</string>
    <string name="dont_recived_the_otp">Didn’t received the OTP Code yet?</string>
    <string name="resend">Resend</string>
    <string name="or">or</string>
    <string name="otp_was_send_to">OTP Code was sent to <b> %1$s </b> it may take few minutes</string>
    <string name="submission_date">Submission Date</string>
    <string name="materials">materials</string>
    <string name="number_too_short_for_nepal">This phone number is too short for Nepal</string>
    <string name="number_too_long_for_nepal">This phone number is too long for Nepal</string>
    <string name="edit">Edit</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_suppored_filetype"> is not a supported file type</string>
    <string name="form_detail">Please provide the details asked in the given form for admission enquiry and submit it. Once the form is submitted we will contact you within 24 hours for further         process of admission.</string>
    <string name="name_of_student"><![CDATA[Full Name of Student *]]></string>
    <string name="registration_class">Registration Class *</string>
    <string name="date_of_birth">Date of Birth *</string>
    <string name="contact_no">Contact no *</string>
    <string name="father_name">Parents Name *</string>
    <string name="previous_school">Previous School *</string>
    <string name="are_optional_fields">* are required fields</string>
    <string name="loading">Loading...</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>


    //from ShikshyaParent
    <string name="invalid_no_provided">Number you provided is invalid. Please contact School administration if it continues.</string>
    <string name="authenticating_your_number">Authenticating your number.</string>
    <string name="verifying_code">Verifying Code</string>
    <string name="number_invalid"><![CDATA[The code provided is <b>invalid</b>. Please try again.]]></string>
    <string name="resending_otp">Resending OTP Code</string>

    <string name="the_code_was_sent_to"><![CDATA[The code was sent to <b>]]></string>
    <string name="the_code_was_sent_to_984_it_may_take_few_minutes">The code was sent to 984******* it may take few minutes.</string>
    <string name="enter_the_6_digit_code_you_received_via_sms">Enter the 6-digit code you received via SMS.</string>
    <string name="code">Code</string>
    <string name="resend_sms">Resend SMS</string>
    <string name="wrong_number">Wrong Number ?</string>
    <string name="didn_t_receive_sms">Didn\'t receive SMS</string>
    <string name="if_it_takes_too_long_for_otp_please_contact_following_numbers">If it takes too long for OTP, Please contact following numbers</string>
    <string name="it_may_take_few_minutes"><![CDATA[</b> it may take few minutes.]]></string>
    <string name="select_your_school">Select your school</string>
    <string name="search_school">Search your School Name</string>
    <string name="notice_board_is_empty">Notice Board is empty!!!</string>
    <string name="looks_like_there_are_no_any_notices_published_yet">Looks like there are no any notices published yet</string>
    <string name="total_student_staff_report"><![CDATA[Total Student & Staff Report]]></string>


    <string name="wifi_or_data_is_off">Wi-Fi or data is Off</string>
    <string name="plz_on_wifi_or_data">please turn on wi-fi or mobile data to continue</string>
    <string name="turn_on_network_and_retry">Turn On Mobile Data And Try again!</string>
    <string name="retry">RETRY</string>
    <string name="cannot_connect_to_web">\"Can\'t connect To the Internet \"</string>
    <string name="cannot_connect_to_server">Could\'t connect to the server</string>
    <string name="sorry_cannot_connect_to_server">Sorry!! could\'t connect to the server plz check your internet connection and try again</string>
    <string name="sikshya">Sikshya Executive</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="sn">SN</string>
    <string name="class_information">Class Information : </string>
    <string name="amount">Amount : </string>
    <string name="penalty">Penalty : </string>
    <string name="discount">Discount : </string>
    <string name="pre_balance">Pre Balance : </string>
    <string name="sub_total">Sub Total : </string>
    <string name="paid">Paid : </string>
    <string name="dues">Dues : </string>
    <string name="user">User : </string>
    <string name="time">Time : </string>
    <string name="no_record_found_please_select_date_for_records">No record found. Please select Date for Records.</string>

</resources>
